src/test/ui/const-generics/const_evaluatable_checked/let-bindings.stderr
error: constant expression depends on a generic parameter
  --> $DIR/let-bindings.rs:6:68
   |
LL | fn test<const N: usize>() -> [u8; { let x = N; N + 1 }] where [u8; { let x = N; N + 1 }]: Default {
   |                                                                    ^^^^^^^^^^^^^^^^^^^^ required by this bound in `test::{{constant}}#0`
   |
   = help: consider moving this anonymous constant into a `const` function

error: overly complex generic constant
  --> $DIR/let-bindings.rs:6:35
   |
LL | fn test<const N: usize>() -> [u8; { let x = N; N + 1 }] where [u8; { let x = N; N + 1 }]: Default {
   |                                   ^^^^^^-^^^^^^^^^^^^^
   |                                         |
   |                                         unsupported statement
   |
   = help: consider moving this anonymous constant into a `const` function

error: aborting due to 2 previous errors

